--- a/gb/22/1/1/n13473867.md
+++ b/gb/22/1/1/n13473867.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hlsodg3891/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hlsodg3891/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hlsodg3891/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>内幕：赌王周焯华人生起灭 涉中共权斗</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/01/id13474766-4bb0913987fdc82f92475ac787433240-600x400.jpg" />
 <h6>“小赌王”周焯华意外发迹的幻影人生，伴随着他赌博网络的破局，在喧闹一时之后，光环寂灭，落寞收场。（大纪元制图）
 </h6>
 <hr>
 	<p>【大纪元2022年01月01日讯】（大纪元专题部记者凌云三报导）黑头套，只露出两个眼洞，一个全身黑装的男人在众人的聚焦下被押上了警车，锁着他双手的手铐显得程亮而醒目。</p>
-<p>此人就是澳门有名的赌业大亨和娱乐大亨，绰号“<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E6%B4%97%E7%B1%B3%E5%8D%8E.md#1">洗米华</a>”的<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E5%A4%AA%E9%98%B3%E5%9F%8E%E9%9B%86%E5%9B%A2.md#1">太阳城集团</a>董事会主席<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E5%91%A8%E7%84%AF%E5%8D%8E.md#1">周焯华</a>。不过，这已不再是周焯华出品的警匪片中的一幕，而是他现实人生中刚刚上演的真景实镜。</p>
-<p>2021年11月27日早晨，<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E5%91%A8%E7%84%AF%E5%8D%8E.md#1">周焯华</a>在澳门因涉嫌非法经营赌博和洗钱被警方逮捕。拥有葡萄牙国籍的周焯华（Alvin Chau），1974年5月30日出生于中国的赌城澳门，除经营赌博业，还涉入娱乐圈，是电影投资者、监制和演员。</p>
-<p>据中共官媒《人民日报》海外版2020年1月的一个报导，周焯华以澳门影视制作文化协会会长身份接受专访，称他掌舵的<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E5%A4%AA%E9%98%B3%E5%9F%8E%E9%9B%86%E5%9B%A2.md#1">太阳城集团</a>在过去的十几年中参与投资制作了电影65部，包括《扫毒》、《湄公河行动》、《红海行动》等赞颂中共警察的“爱国主旋律”电影。其它影视代表作还有《情迷》、《凶手还未睡》、《澳门风云3》、《徒刑》等。</p>
+<p>此人就是澳门有名的赌业大亨和娱乐大亨，绰号“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B4%97%E7%B1%B3%E5%8D%8E.md#1">洗米华</a>”的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%AA%E9%98%B3%E5%9F%8E%E9%9B%86%E5%9B%A2.md#1">太阳城集团</a>董事会主席<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%91%A8%E7%84%AF%E5%8D%8E.md#1">周焯华</a>。不过，这已不再是周焯华出品的警匪片中的一幕，而是他现实人生中刚刚上演的真景实镜。</p>
+<p>2021年11月27日早晨，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%91%A8%E7%84%AF%E5%8D%8E.md#1">周焯华</a>在澳门因涉嫌非法经营赌博和洗钱被警方逮捕。拥有葡萄牙国籍的周焯华（Alvin Chau），1974年5月30日出生于中国的赌城澳门，除经营赌博业，还涉入娱乐圈，是电影投资者、监制和演员。</p>
+<p>据中共官媒《人民日报》海外版2020年1月的一个报导，周焯华以澳门影视制作文化协会会长身份接受专访，称他掌舵的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%AA%E9%98%B3%E5%9F%8E%E9%9B%86%E5%9B%A2.md#1">太阳城集团</a>在过去的十几年中参与投资制作了电影65部，包括《扫毒》、《湄公河行动》、《红海行动》等赞颂中共警察的“爱国主旋律”电影。其它影视代表作还有《情迷》、《凶手还未睡》、《澳门风云3》、《徒刑》等。</p>
 <p>习惯周旋于赌场、情场的周焯华参与的影视作品也大多离不开警匪片等熟悉的内容。让人疑惑的是，从他出品的一些影视作品中是否也能像本文开头一幕那样投射出他真实生活的影子？</p>
 <p>要讲述周焯华的人生故事还得从另外几部似乎和他不相关的影视作品开始。</p>
-<h2>《城市故事》“<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E6%B4%97%E7%B1%B3%E5%8D%8E.md#1">洗米华</a>”出场</h2>
+<h2>《城市故事》“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B4%97%E7%B1%B3%E5%8D%8E.md#1">洗米华</a>”出场</h2>
 <p>周焯华的人生沉浮似乎从一开始就和影视圈绑在了一起。</p>
 <p>周焯华有一个“洗米华”的花名，这个绰号据称源自一部1986开始流行的港剧《城市故事》，因周焯华长相酷似剧中外号“洗米华”的男主角，而且两人名字中都有一个“华”字，于是他就有了“洗米华”的绰号。传媒和认识他的朋友更喜欢用“洗米华”来称呼他，以至于“洗米华”成了他的代名词。</p>
 <p>1989年周润发主演的《赌神》风靡一时，带动了一波赌博片热潮。当时的周焯华还只是个十几岁的少年，虽身在赌城，但成为赌王和娱乐大亨或许还只是一个令他神往的梦幻。</p>
-<p>20年后的2009年，已有“<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E6%BE%B3%E9%97%A8%E5%B0%8F%E8%B5%8C%E7%8E%8B.md#1">澳门小赌王</a>”称号的周焯华投资电影《扑克王》上映，他正式踏足影视圈。2011年，他成立太阳娱乐文化有限公司，开始不断投资商业电影。</p>
+<p>20年后的2009年，已有“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%BE%B3%E9%97%A8%E5%B0%8F%E8%B5%8C%E7%8E%8B.md#1">澳门小赌王</a>”称号的周焯华投资电影《扑克王》上映，他正式踏足影视圈。2011年，他成立太阳娱乐文化有限公司，开始不断投资商业电影。</p>
 <h2>《濠江风云》江湖恩怨</h2>
 <p>说起周焯华就不能不提起另一个曾经叱咤澳门的赌场大佬尹国驹。尹国驹曾于1998年自资拍摄描述澳门黑帮争斗的自传式电影《濠江风云》。他这一高调的行事亦成为后来法庭审判他时的重要证物。</p>
 <p>上个世纪末，在澳门有个被《时代周刊》称为“澳葡末期教父”、绰号“崩牙驹”的风云人物，被喻为权力大过当时的澳门总督。这个人就是尹国驹，他被传媒报导为澳门黑社会14K组织的头目，其黑帮身份曾被中共外交部发言人华春莹公开证实。只有小学二年级教育程度的尹国驹出生于澳门贫民区，因有一次他骑电单车摔坏了牙齿而有了“崩牙驹”的绰号。</p>
@@ -42,8 +42,8 @@
 <p>澳门赌场不仅有黑社会，也有去赌博的中共贪官。周焯华与中共官员不光是在官方场合有交集，在幕后赌桌上可能交集更多。</p>
 <h2>《澳门风云》赌王争位</h2>
 <p>赌场上充满利益争斗，赌场林立的澳门历来都是风云变幻之地。</p>
-<p>在澳门赌场混自然少不了和<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E8%B5%8C%E7%8E%8B%E4%BD%95%E9%B8%BF%E7%87%8A.md#1">赌王何鸿燊</a>家族打交道，周焯华的“小赌王”之路也离不开赌王家族的人的栽培。赌王四太梁安琪是周焯华的“贵人”。</p>
-<p>在1989年正式成为何鸿燊的四太后，梁安琪积极介入何鸿燊事业。为培植自己的势力，梁安琪看中了周焯华。在梁安琪的帮助下，周焯华承包了很多赌厅，逐渐成为澳门的赌厅之王。又因两人关系好，坊间甚至有了两人的绯闻。当老<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E8%B5%8C%E7%8E%8B%E4%BD%95%E9%B8%BF%E7%87%8A.md#1">赌王何鸿燊</a>在2020年去世后，梁安琪和以何超琼为首的二房明争暗斗更加激烈。在梁安琪“对抗”何超琼过程中，已成为“小赌王”的周焯华成了梁安琪背后一股重要力量。</p>
+<p>在澳门赌场混自然少不了和<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B5%8C%E7%8E%8B%E4%BD%95%E9%B8%BF%E7%87%8A.md#1">赌王何鸿燊</a>家族打交道，周焯华的“小赌王”之路也离不开赌王家族的人的栽培。赌王四太梁安琪是周焯华的“贵人”。</p>
+<p>在1989年正式成为何鸿燊的四太后，梁安琪积极介入何鸿燊事业。为培植自己的势力，梁安琪看中了周焯华。在梁安琪的帮助下，周焯华承包了很多赌厅，逐渐成为澳门的赌厅之王。又因两人关系好，坊间甚至有了两人的绯闻。当老<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B5%8C%E7%8E%8B%E4%BD%95%E9%B8%BF%E7%87%8A.md#1">赌王何鸿燊</a>在2020年去世后，梁安琪和以何超琼为首的二房明争暗斗更加激烈。在梁安琪“对抗”何超琼过程中，已成为“小赌王”的周焯华成了梁安琪背后一股重要力量。</p>
 <p>澳门博彩业流传“六张牌”说法。所谓“牌”是指澳门官方承认合法的澳门博彩业经营许可证，持有赌场牌照的人则按照具体规定可以开设具体数量赌厅和赌台。</p>
 <p>1999年以前，澳门博彩业长期为何鸿燊家族垄断。1999年以后，澳门政府发放新“赌牌”，银河娱乐、永利度假村入局，形成三足鼎立。2002年，澳门博彩业再次有新入局者：美高梅金殿超濠、金沙中国、新濠博亚。此后，澳门博彩业“六张赌牌”格局延续至今。</p>
 <p>在何鸿燊离世后，六张赌牌有三张为赌王家族成员继承，经营实体分别是澳博控股、美高梅中国和新濠博亚。澳博控股当前为何鸿燊四太太梁安琪控制。美高梅中国和新濠博亚则均由二房控制。何鸿燊二房之子何猷龙经营新濠博亚。美高梅中国则由二房长女何超琼与美高梅集团合作经营，何超琼还持有美高梅中国22.49%股权。</p>
@@ -65,41 +65,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/21/12/6/n13419356.md#1">抓捕周焯华 传习近平六次批示</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/21/12/6/n13420079.md#1">澳门周焯华涉洗钱 江派高官曾为其站台</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/21/12/9/n13426686.md#1">舆情关注澳门新赌王周焯华会否被“送中”</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/21/12/18/n13445131.md#1">澳门中联办副主任被免职 疑涉周焯华案</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/6/n13419356.md#1">抓捕周焯华 传习近平六次批示</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/6/n13420079.md#1">澳门周焯华涉洗钱 江派高官曾为其站台</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/9/n13426686.md#1">舆情关注澳门新赌王周焯华会否被“送中”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/18/n13445131.md#1">澳门中联办副主任被免职 疑涉周焯华案</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/4/n11234376.md#1" target="_blank">【征文】文宇：科举千年兴衰录（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/6/n11167851.md#1" target="_blank">天主教新闻网：中共的群体灭绝罪行</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/4/n10615598.md#1" target="_blank">卞世传：江泽民篡改扬州抗日史的卑劣无耻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/31/n11625277.md#1" target="_blank">法轮功真相传入太平洋热带岛国瓦努阿图</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/3/n13617717.md#1">【百年真相】惊天大案头目 被江泽民故意放走？</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/2/17/n13585268.md#1">【未解之谜】通灵男孩之一：癌症是“螃蟹”？</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/3/n13617747.md#1">【百年真相】杨开慧29岁早逝 竟与毛有关？</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/6/n13625884.md#1">五行异象 大风吹太和殿大门倒地  史鉴示警</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13640138.md#1">【财商天下】伦镍逼空大战 谁是操控黑手？</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13640044.md#1">【远见快评】乌国生化武器之谜 韩变天中共心惊</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13639447.md#1">【拍案惊奇】后院起火 普京或愿与乌总统谈判</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/10/n13635530.md#1">沈舟：俄军遭遇高科技对手 中共傻眼</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/10/n13636238.md#1">【一线采访】上海疫情飙升 民众：情况严重</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/9/n13634247.md#1">栗战书人大报告惹议 学者：突显中共倒行逆施?</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/9/n13634546.md#1">大S再婚震惊娱乐圈 20年未换电话号码成热话</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/10/n13637452.md#1">迪丽热巴进剧组 用红白蓝色蛇皮袋当行李箱</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/9/n13634699.md#1">舆论持续关注铁链女 《窦娥冤》剧演被叫停</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13639867.md#1">持台湾护照赴英拍节目 杜汶泽在桃园机场捐款</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/10/n13637659.md#1">忧众星挺乌克兰？TVB明珠台再度不播奥斯卡</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/7/n13626962.md#1">早餐天天喝这一杯 改善白发、年轻20岁</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/9/n13633895.md#1">73岁帕金森老人疾病逆转！神韵的神奇健康功效</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/8/n13630795.md#1">比苹果含钾更高？早上喝一杯柠檬水的九大理由</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/10/n13636092.md#1">【健康1+1】内容很吓人？FDA首次公开辉瑞副作用报告</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/10/n13636278.md#1">不用筛检和打疫苗 这三个国家欢迎所有游客</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689765.md#1">【远见快评】傅政华双开通报 3大谜团全解析</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">【唐瑞讲故事】朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hlsodg3891/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hlsodg3891/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/1/n13473867.htm">内幕：赌王周焯华人生起灭 涉中共权斗</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/1/n13473867.htm">内幕：赌王周焯华人生起灭 涉中共权斗</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hlsodg3891/djy/blob/master/gb/22/1/1/n13473867.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hlsodg3891/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hlsodg3891/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hlsodg3891/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/22/1/1/n13473867.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
