--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -19,6 +19,13 @@
 <p>“克雷门丘克（Kremenchuk），很多导弹（周六）上午袭击了该城市。”卢宁补充道。</p>
 <p>俄罗斯国防部发言人伊戈尔?科纳申科夫(Igor Konashenkov)在周六的简报中说，俄军袭击了克雷门丘克的炼油厂，摧毁了储存汽油和柴油的设施，这些设施为乌克兰东部和中部地区的部队提供了汽油和柴油燃料。</p>
 <p>卢宁说，三架俄罗斯飞机在当地时间周六上午6点左右实施了这次袭击。</p>
+<h3>乌军事区域长官：俄袭击第聂伯罗彼得罗夫斯克 铁路交通中断</h3>
+<p>乌克兰中部第聂伯罗彼得罗夫斯克地区（Dnipropetrovsk）地区军事管理部门负责人说，该地区铁路交通受到俄军袭击后中断，并引发一场火灾。</p>
+<p>瓦伦丁·列兹尼琴科（Valentyn Reznichenko）说，一枚火箭弹击中了巴甫洛赫拉德区（Pavlohrad）的铁路，迫使火车交通暂停。</p>
+<p>“一枚火箭弹击中了铁路。”他说，“铁轨和电线被严重损坏，火车车皮爆炸，火车交通暂停，救援人员正在救火。”</p>
+<p>列兹尼琴科说，根据初步信息，没有人死亡。但第二轮袭击击中一个开放区域，引起了火灾。他说，有一个人受伤。</p>
+<p>乌克兰总检察长办公室说，已经对这次袭击进行了刑事调查。</p>
+<p>“由于俄罗斯入侵者空袭，制导导弹损坏了铁轨和货运车辆。”该办公室在Telegram上的声明说。</p>
 <h3>铁路负荷太重 乌克兰的谷物出口停滞不前</h3>
 <p>分析师机构APK-Inform周六表示，在俄罗斯入侵并封锁黑海主要港口后，贸易商纷纷寻找替代出口路线，乌克兰的铁路正在努力应对该国西部边境谷物积压。</p>
 <p>根据国际谷物理事会的数据，乌克兰是2020/21年度世界第四大谷物出口国，大部分商品通过黑海运出。</p>
@@ -78,13 +85,13 @@
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689482.md#1">俄石油公司燃料库发生大火 视频曝光</a></li>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689683.md#1">乌情报：在俄入侵前 中共大规模网攻乌克兰</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691176.md#1">法驻沪总领事馆：不要因防疫将父母和孩子分开</a></li>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691105.md#1">俄乌局势 俄航天局长：或终止空间站合作</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691120.md#1">应对北韩挑衅 韩国拟重新部署美国战略武器</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/9/n11925917.md#1" target="_blank">掸封尘：毛泽东和江青有一个共同嗜好</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11243655.md#1" target="_blank">如何带好问题生 真善忍解难题</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/25/n11000755.md#1" target="_blank">文革处决纪录：非战争下的中国之最</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/8/n11370721.md#1" target="_blank">爱德华?斯考特: 对迫害善良的一个政治上的回应</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
