--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -26,6 +26,17 @@
 <p>列兹尼琴科说，根据初步信息，没有人死亡。但第二轮袭击击中一个开放区域，引起了火灾。他说，有一个人受伤。</p>
 <p>乌克兰总检察长办公室说，已经对这次袭击进行了刑事调查。</p>
 <p>“由于俄罗斯入侵者空袭，制导导弹损坏了铁轨和货运车辆。”该办公室在Telegram上的声明说。</p>
+<h3>乌方称俄军在集结 摩尔多瓦分离区否认</h3>
+<p>美联社报导说，摩尔多瓦小小的德涅斯特河（Transnistria）分离区当局周六否认乌克兰关于驻扎在那里的俄军正在集结，以在乌克兰边境进行“挑衅”的说法，称这“绝对不真实”。</p>
+<p>周六早些时候，乌克兰武装部队总参谋部说，已经在德涅斯特河地区的俄军正在“展示准备进攻的态势，并可能对乌克兰采取敌对行动”。</p>
+<p>“乌克兰总参谋部传播的信息绝对不真实。”德涅斯特河沿岸地区外交部在一份声明中称，领导人已经多次“宣布对乌克兰没有任何威胁”。</p>
+<p>摩尔多瓦外交部周六也表示，“没有任何信息可以证实（俄方）在德涅斯特河地区调动军队”，“国家机构正在密切监测该地区的安全局势。”</p>
+<p>德涅斯特河地区是俄罗斯支持的摩尔多瓦领土，在20世纪90年代初一场短暂的内战后脱离，未得到大多数国家的承认。估计有1,500名俄罗斯士兵驻扎在那里。</p>
+<h3>乌军进一步向北移动</h3>
+<p>乌军周六从首都基辅进一步向北移动，在从俄军手中夺回领土后，在布查镇（或译布卡，Bucha）占据了阵地。</p>
+<p>美联社记者数了一下，在一条街道上和一所房子的前院里，地上共有6具平民尸体。</p>
+<p>乌军将电缆绑在尸体上，使用一列坦克和装甲车，将它们拉出街道，因为担心它们可能有诱杀爆炸装置。</p>
+<p>该镇居民称，这些平民被俄军杀害。</p>
 <h3>铁路负荷太重 乌克兰的谷物出口停滞不前</h3>
 <p>分析师机构APK-Inform周六表示，在俄罗斯入侵并封锁黑海主要港口后，贸易商纷纷寻找替代出口路线，乌克兰的铁路正在努力应对该国西部边境谷物积压。</p>
 <p>根据国际谷物理事会的数据，乌克兰是2020/21年度世界第四大谷物出口国，大部分商品通过黑海运出。</p>
@@ -78,6 +89,8 @@
 <p>“制裁肯定有效，俄罗斯肯定害怕制裁。这让他们感到不舒服。它打击了他们的经济。但一个问题是制裁如何运作。我们正在向美国和欧洲领导人展示并告诉他们，每个人都必须迅速合作。”泽连斯基说。</p>
 <p>“它们（制裁）必须对寡头、俄罗斯总统、所有政党和整个国家产生影响。如果美国希望谈判取得成功，美国应该继续努力（加强制裁）。”</p>
 <p>责任编辑：林妍#</p>
+<div id="gtx-anchor" style="position: absolute; visibility: hidden; left: 10px; top: 1458.14px; width: 276.859px; height: 18px;"></div>
+<div class="jfk-bubble gtx-bubble" style="visibility: visible; left: 134px; top: 1486px; opacity: 1;"></div>
 	
 <hr>
 
@@ -91,7 +104,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/2/n10186094.md#1" target="_blank">林辉：天安门杀毛案疑点重重 侦案者冤狱七年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/3/n9920294.md#1" target="_blank">肝癌不治自愈 澳洲华商经历的奇迹</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/27/n10430861.md#1" target="_blank">新闻奇才拒赴台湾 命丧中共劳改营</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/28/n11352168.md#1" target="_blank">前大陆公安：中共镇压法轮功早有预谋</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
