--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -19,6 +19,12 @@
 <p>“克雷门丘克（Kremenchuk），很多导弹（周六）上午袭击了该城市。”卢宁补充道。</p>
 <p>俄罗斯国防部发言人伊戈尔?科纳申科夫(Igor Konashenkov)在周六的简报中说，俄军袭击了克雷门丘克的炼油厂，摧毁了储存汽油和柴油的设施，这些设施为乌克兰东部和中部地区的部队提供了汽油和柴油燃料。</p>
 <p>卢宁说，三架俄罗斯飞机在当地时间周六上午6点左右实施了这次袭击。</p>
+<h3>美将协助向乌克兰转让苏联时期坦克</h3>
+<p>一位熟悉该计划的消息人士称，美国预计将帮助促进向乌克兰转让苏联时期的坦克。</p>
+<p>官员们拒绝透露最终会有多少辆坦克运往乌克兰或何时运往。</p>
+<p>但预计美国将帮助促进这一转移。</p>
+<p>乌克兰总统沃弗拉基米尔·泽连斯基（Volodymyr Zelensky）曾多次要求各国提供更多坦克。</p>
+<p>《纽约时报》首先报导了这一消息。</p>
 <h3>乌克兰国家核能发电公司：扎波罗热核电站附近遭袭</h3>
 <p>位于扎波罗热（Zaporizhzhia）核电站附近的乌克兰恩纳霍达市（Enerhodar）据称周六发生了一系列爆炸。</p>
 <p>乌克兰国家核机构在其官方Telegram频道上报告了当天发生的袭击事件。</p>
@@ -113,7 +119,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/17/n9856265.md#1" target="_blank">毛泽东诗词中的“真情”与马列婚外情</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/16/n10855894.md#1" target="_blank">绝处逢生 韩国男子见证两个奇迹</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/29/n11148760.md#1" target="_blank">林辉：抗战时毒杀日外交官 英雄难逃中共毒手</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/9/15/n2263295.md#1" target="_blank">调查报告：法轮功与健康</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
